feat: Refine result display and redesign main screen UI
This commit introduces significant UI/UX enhancements to the main and result screens and refactors the result presentation logic.

On the result screen, the logic is updated to display only the top-scoring category instead of a full list, providing a clearer and more focused result to the user. The layout has also been refined with updated margins and text styling.

The main screen has been redesigned for a more intuitive user flow:
- Replaces the standard "Gallery" and "Analyze" buttons with Floating Action Buttons (FABs) for a modern, icon-driven interface.
- A new "Retake" FAB is added at the top, allowing users to easily select a different image.
- Adds new descriptive text prompts to guide the user through retaking a picture or proceeding with the analysis.
- Introduces new vector assets (`ic_camera_retake.xml` and `ic_analyze_send.xml`) for the FAB icons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="analyze">Analyze</string>
     <string name="result">Result</string>
     <string name="empty_image_warning">Image cannot be empty</string>
+    <string name="retake_image_question">Blurry image? Retake!</string>
+    <string name="happy_with_picture_prompt">If you\'re happy with the picture, tap below for AI Result</string>
 </resources>
